fix: keyboard shortcut setting not visible in vlad fork

--- a/ui/src/extension/index.scss
+++ b/ui/src/extension/index.scss
@@ -187,6 +187,6 @@
     width: 100px;
   }
   #setting_queue_keyboard_shortcut {
-    width: 200px;
+    display: none;
   }
 }
